src/test/deca/syntax/valid/multiple_print.deca
// Description:
//    Programme avec trois print sans retour a la ligne,
//    puis un println avec argument, et un dernier print.
//
// Resultats:
// abcd
// e
// Le dernier e n'a pas de retour à la ligne.
//
// Historique:
//    cree le 05/01/2022

{
        print("a");
        print("b");
        print("c");
        println("d");
        print("e");
}
